--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "template-string-optimize-loader",
-  "version": "3.0.0",
-  "description": "template string optimize loader module for webpack",
+  "name": "rollup-plugin-template-string-optimize",
+  "version": "1.0.0",
+  "description": "template string optimize plugin for rollup",
   "main": "lib/index.js",
   "scripts": {
     "lib": "tsc -p tsconfig.json",
-    "test": "bash ./test/test.sh",
+    "test": "rollup -c",
     "release": "npm run lib && npm publish"
   },
-  "author": "chenjiahan",
+  "author": "chenjiahan, huihuimoe",
   "license": "ISC",
   "devDependencies": {
-    "@types/acorn": "^4.0.2",
+    "@types/acorn": "^4.0.3",
     "@types/escodegen": "^0.0.6",
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "typescript": "^2.2.2",
-    "webpack": "^2.4.1"
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^4.0.0-beta.8",
+    "typescript": "^3.0.1"
   },
   "bugs": {
-    "url": "https://github.com/chenjiahan/template-string-optimize-loader/issues"
+    "url": "https://github.com/huihuimoe/rollup-plugin-template-string-optimize/issues"
   },
-  "homepage": "https://github.com/chenjiahan/template-string-optimize-loader#readme",
+  "homepage": "https://github.com/huihuimoe/rollup-plugin-template-string-optimize#readme",
   "dependencies": {
     "acorn": "5.7.1",
     "escodegen": "1.11.0"
