--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
+        "target": "esnext",
+        "module": "es6",
         "moduleResolution": "node",
         "outDir": "lib",
         "isolatedModules": false,
