--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "module": "es6",
+        "target": "es5",
         "moduleResolution": "node",
         "outDir": "lib",
         "isolatedModules": false,
